<resources>
    <string name="app_name">TunnelbaneApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Title">SL-APP</string>
    <string name="siteEntryLabel">Enter site</string>
    <string name="enterButtonLabel">Enter</string>
    <string name="title_activity_departure">DepartureActivity</string>
    <string name="SiteString">Tekniska Högskolan</string>
    <string name="busText">Large Text</string>
    <string name="metroText">Large Text</string>
    <string name="trainText">Large Text</string>
    <string name="metroImage">metropicture</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
