<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/metroImage">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

    </ScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView" >

    </HorizontalScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterButtonLabel"
        android:id="@+id/button"
        android:textSize="40sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:inputType="text"
        android:textSize="50sp"
        android:selectAllOnFocus="true"
        android:layout_below="@+id/scrollView"
        android:layout_toRightOf="@+id/scrollView"
        android:layout_toEndOf="@+id/scrollView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/busText"
        android:id="@+id/busView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trainText"
        android:id="@+id/trainView"
        android:layout_above="@+id/button"
        android:layout_alignStart="@+id/busView"
        android:layout_marginBottom="57dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SiteString"
        android:id="@+id/siteTitle"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:src="@drawable/metro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="left|bottom"
        android:contentDescription="@string/metroImage"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/metroView"
        android:layout_toStartOf="@+id/busView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/metroText"
        android:id="@+id/metroView"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/editText"
        android:layout_toEndOf="@+id/imageView" />

</RelativeLayout>
