<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.simonignat.tunnelbaneapp.DepartureActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SiteString"
        android:id="@+id/SiteTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/busText"
        android:id="@+id/busView"
        android:layout_below="@+id/SiteTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/metroText"
        android:id="@+id/metroView"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/trainView"
        android:layout_alignStart="@+id/trainView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trainText"
        android:id="@+id/trainView"
        android:layout_below="@+id/metroView"
        android:layout_alignLeft="@+id/busView"
        android:layout_alignStart="@+id/busView"
        android:layout_marginTop="93dp" />

</RelativeLayout>
